@@ -2,12 +2,17 @@ package com.posapi.application.service.purchase;
 
 import com.posapi.domain.model.product.Product;
 import com.posapi.domain.model.purchase.Purchase;
-import com.posapi.domain.model.purchase.PurchaseItem;
-import com.posapi.domain.model.user.User;
 import com.posapi.domain.model.role.Role;
-import com.posapi.domain.port.output.*;
-import com.posapi.infrastructure.adapter.input.rest.purchase.dto.PurchaseRequest;
+import com.posapi.domain.model.user.User;
+import com.posapi.domain.port.output.InventoryTransactionRepository;
+import com.posapi.domain.port.output.ProductRepository;
+import com.posapi.domain.port.output.PurchaseItemRepository;
+import com.posapi.domain.port.output.PurchaseRepository;
+import com.posapi.domain.port.output.UserRepository;
 import com.posapi.infrastructure.adapter.input.rest.purchase.dto.PurchaseItemRequest;
+import com.posapi.infrastructure.adapter.input.rest.purchase.dto.PurchaseRequest;
+import com.posapi.infrastructure.adapter.input.rest.purchase.dto.PurchaseResponse;
+import com.posapi.infrastructure.adapter.input.rest.purchase.mapper.PurchaseRestMapper;
 import com.posapi.infrastructure.security.SecurityContextHelper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -21,10 +26,16 @@ import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.Mockito.argThat;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class PurchaseServiceTest {
@@ -41,6 +52,8 @@ class PurchaseServiceTest {
     private UserRepository userRepository;
     @Mock
     private SecurityContextHelper securityContextHelper;
+    @Mock // Added mock for PurchaseRestMapper
+    private PurchaseRestMapper purchaseRestMapper;
 
     @InjectMocks
     private PurchaseService purchaseService;
@@ -48,7 +61,6 @@ class PurchaseServiceTest {
     private User currentUser;
     private Product product;
     private PurchaseRequest purchaseRequest;
-    private PurchaseItemRequest purchaseItemRequest;
 
     @BeforeEach
     void setUp() {
@@ -56,10 +68,7 @@ class PurchaseServiceTest {
         UUID roleId = UUID.randomUUID();
         UUID productId = UUID.randomUUID();
 
-        currentUser = User.builder()
-                .id(userId)
-                .role(Role.builder().id(roleId).build())
-                .build();
+        currentUser = User.builder().id(userId).role(Role.builder().id(roleId).build()).build();
 
         product = Product.builder()
                 .id(productId)
@@ -68,33 +77,28 @@ class PurchaseServiceTest {
                 .currentStock(BigDecimal.TEN)
                 .build();
 
-        purchaseItemRequest = new PurchaseItemRequest(productId, BigDecimal.valueOf(5), BigDecimal.valueOf(20));
+        PurchaseItemRequest purchaseItemRequest = new PurchaseItemRequest(
+                null, productId, BigDecimal.valueOf(5), BigDecimal.valueOf(20));
 
         purchaseRequest = new PurchaseRequest(UUID.randomUUID(), Instant.now(), List.of(purchaseItemRequest));
     }
 
     @Test
-    void whenCreatePurchase_thenStockShouldIncreaseAndInventoryTransactionShouldBeCreated() {
-        // Arrange
+    void createPurchaseIncreasesStockAndCreatesInventoryTransaction() {
         when(securityContextHelper.getCurrentUserOrThrow()).thenReturn(currentUser);
         when(purchaseRepository.save(any(Purchase.class))).thenAnswer(invocation -> invocation.getArgument(0));
         when(purchaseItemRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
         when(productRepository.findById(product.getId())).thenReturn(Optional.of(product));
-        when(userRepository.findAllById(anySet())).thenReturn(Collections.emptyList()); // Simplificar el mock del mapper
+        when(userRepository.findAllById(Set.of(currentUser.getId()))).thenReturn(List.of(currentUser));
+        // Stub the purchaseRestMapper.toResponse method
+        when(purchaseRestMapper.toResponse(any(Purchase.class))).thenReturn(PurchaseResponse.builder().build());
 
-        // Act
+
         purchaseService.createPurchase(purchaseRequest, currentUser.getId());
 
-        // Assert
-        // 1. Verificar que el producto se guarda con el stock incrementado
-        verify(productRepository, times(1)).save(argThat(p ->
-                p.getCurrentStock().equals(BigDecimal.valueOf(15)) // 10 + 5
-        ));
-
-        // 2. Verificar que se guarda la transacción de inventario
+        verify(productRepository, times(1)).save(argThat((Product p) ->
+                p.getCurrentStock().equals(BigDecimal.valueOf(15))));
         verify(inventoryTransactionRepository, times(1)).saveAll(anyList());
-
-        // 3. Verificar que se guarda la compra y sus ítems
         verify(purchaseRepository, times(1)).save(any(Purchase.class));
         verify(purchaseItemRepository, times(1)).saveAll(anyList());
     }
